--- a/index.html
+++ b/index.html
@@ -737,12 +737,12 @@
     </div>
   </div>
   <nav>
-    <a href="#" class="active">MONITOR</a>
-    <a href="#">DEFESA CIVIL</a>
-    <a href="#">SOLAR</a>
-    <a href="#">COMUNIDADE</a>
-    <a href="#">CURSOS</a>
-    <a href="#">MEMBROS</a>
+    <a href="index.html" class="active">MONITOR</a>
+    <a href="defesa-civil.html">DEFESA CIVIL</a>
+    <a href="solar.html">SOLAR</a>
+    <a href="comunidade.html">COMUNIDADE</a>
+    <a href="cursos.html">CURSOS</a>
+    <a href="membros.html">MEMBROS</a>
   </nav>
   <div class="header-status">
     <div class="status-pill"><span class="dot"></span> SISTEMA ONLINE</div>
