--- a/index.html
+++ b/index.html
@@ -671,13 +671,81 @@
 
   /* RESPONSIVE */
   @media (max-width: 900px) {
+    header {
+      flex-wrap: wrap;
+      height: auto;
+      padding: 10px 16px;
+      gap: 8px;
+    }
+    .logo-text { font-size: 12px; letter-spacing: 2px; }
+    .logo-sub { font-size: 8px; letter-spacing: 2px; }
+    .logo-icon { width: 30px; height: 30px; font-size: 15px; }
+    nav {
+      flex-wrap: wrap;
+      gap: 2px;
+      order: 3;
+      width: 100%;
+      justify-content: center;
+      padding-top: 4px;
+      border-top: 1px solid var(--border);
+    }
+    nav a {
+      font-size: 10px;
+      padding: 4px 8px;
+      letter-spacing: 1px;
+    }
+    .header-status { gap: 10px; }
+    .status-pill { font-size: 9px; }
+    .clock { font-size: 10px; }
+
+    .ticker-bar { height: 30px; }
+    .ticker-item { font-size: 9px; padding: 0 14px; gap: 5px; }
+    .ticker-label { font-size: 8px; padding: 0 8px; }
+
     main {
       grid-template-columns: 1fr;
+      padding: 12px;
+      gap: 12px;
     }
     .weather-card { grid-column: 1; grid-row: auto; }
     .news-card, .alerts-card, .solar-card, .defesa-card { grid-column: 1; grid-row: auto; }
     .markets-card { grid-column: 1; grid-row: auto; }
-    .solar-body { grid-template-columns: repeat(2,1fr); }
+
+    .markets-grid { grid-template-columns: repeat(2, 1fr) !important; gap: 8px !important; }
+    .market-item { padding: 10px !important; }
+    .market-item .val { font-size: 16px !important; }
+    .market-item .label { font-size: 8px !important; }
+
+    .solar-body { grid-template-columns: repeat(2, 1fr); }
+    .solar-stat { padding: 10px 6px !important; }
+    .solar-stat .value { font-size: 18px !important; }
+    .solar-stat .label { font-size: 8px !important; }
+
+    .news-item { padding: 10px 12px; }
+    .news-title { font-size: 12px; }
+    .news-meta { font-size: 9px; }
+
+    .alert-item { padding: 10px 12px; }
+    .alert-title { font-size: 11px; }
+
+    .card-header { padding: 8px 12px; }
+    .card-title { font-size: 9px; letter-spacing: 2px; }
+    .card-badge { font-size: 8px; padding: 2px 6px; }
+
+    .weather-temp { font-size: 28px !important; }
+    .weather-city { font-size: 10px !important; }
+
+    footer { padding: 14px 12px; }
+    footer p { font-size: 9px; letter-spacing: 1px; }
+  }
+
+  @media (max-width: 480px) {
+    .markets-grid { grid-template-columns: 1fr 1fr !important; }
+    .solar-body { grid-template-columns: 1fr 1fr; }
+    nav a { font-size: 9px; padding: 3px 6px; }
+    .logo { gap: 8px; }
+    .logo-text { font-size: 11px; }
+    main { padding: 8px; gap: 10px; }
   }
 
   /* Separator line */
