--- a/membros.html
+++ b/membros.html
@@ -40,7 +40,8 @@ footer p{font-family:'Share Tech Mono',monospace;font-size:10px;color:var(--mute
 .grid-4{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:12px}
 .loading{padding:30px;text-align:center;font-family:'Share Tech Mono',monospace;font-size:11px;color:var(--muted);animation:blink 1.5s infinite}
 @keyframes blink{0%,100%{opacity:1}50%{opacity:0.2}}
-@media(max-width:900px){header{flex-wrap:wrap;height:auto;padding:10px 16px;gap:10px}nav{flex-wrap:wrap}main{padding:16px}.grid-2,.grid-3{grid-template-columns:1fr!important}}
+@media(max-width:900px){header{flex-wrap:wrap;height:auto;padding:10px 16px;gap:8px}nav{flex-wrap:wrap;gap:2px;order:3;width:100%;justify-content:center;padding-top:4px;border-top:1px solid var(--border)}nav a{font-size:10px;padding:4px 8px;letter-spacing:1px}.logo-text{font-size:12px;letter-spacing:2px}.logo-sub{font-size:8px}.logo-icon{width:30px;height:30px;font-size:15px}main{padding:12px}.plans-grid{grid-template-columns:1fr!important}.plan-price{font-size:26px}.plan-name{font-size:12px}.plan-feature{font-size:12px;padding:6px 0}.plan-btn{margin:12px 16px 16px;padding:10px}.benefit-grid{grid-template-columns:1fr 1fr!important}footer{padding:14px 12px}footer p{font-size:9px}}
+@media(max-width:480px){nav a{font-size:9px;padding:3px 6px}.benefit-grid{grid-template-columns:1fr!important}.plan-header{padding:18px 14px 12px}.plan-card.featured .plan-header{padding-top:30px}}
 
 
 .plan-card{background:var(--card);border:1px solid var(--border);border-radius:4px;overflow:hidden;position:relative}
@@ -90,7 +91,7 @@ footer p{font-family:'Share Tech Mono',monospace;font-size:10px;color:var(--mute
 
 <div class="page-title">🏅 ÁREA DE MEMBROS</div>
 <div class="page-subtitle">PLANOS DE ACESSO AO CONTEÚDO PREMIUM E COMUNIDADE EXCLUSIVA</div>
-<div style="display:grid;grid-template-columns:repeat(3,1fr);gap:16px;margin-bottom:24px">
+<div class="plans-grid" style="display:grid;grid-template-columns:repeat(3,1fr);gap:16px;margin-bottom:24px">
   <div class="plan-card">
     <div class="plan-header"><div class="plan-name">SENTINELA</div><div class="plan-price">GRÁTIS</div><div class="plan-period">PARA SEMPRE</div></div>
     <div class="plan-features">
