--- a/curso-fundamentos.html
+++ b/curso-fundamentos.html
@@ -60,6 +60,9 @@ footer p{font-family:'Share Tech Mono',monospace;font-size:10px;color:var(--mute
 .progress-fill{height:100%;background:var(--green);transition:width 0.3s}
 @media(max-width:900px){header{flex-wrap:wrap;height:auto;padding:10px 16px;gap:10px}nav{flex-wrap:wrap}main{padding:10px}.course-layout{grid-template-columns:1fr!important}.sidebar{border-right:none;border-bottom:1px solid var(--border)}.content-area{padding:20px 16px}}
 
+.yt-embed{border-bottom:1px solid var(--border);background:#000}
+.yt-embed .yt-ratio{position:relative;padding-bottom:56.25%;height:0}
+.yt-embed .yt-ratio iframe{position:absolute;top:0;left:0;width:100%;height:100%;border:0}
 </style>
 <title>Fundamentos da Preparação — PREPPERS BR</title>
 </head>
@@ -83,6 +86,11 @@ footer p{font-family:'Share Tech Mono',monospace;font-size:10px;color:var(--mute
         </div>
       </div>
       <div class="progress-bar"><div class="progress-fill" id="progress-fill" style="width:12%"></div></div>
+            <div class="yt-embed">
+        <div class="yt-ratio">
+          <iframe src="https://www.youtube.com/embed/Fbo5QMem5I0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+      </div>
       <div class="course-layout">
         <div class="sidebar">
           <div class="sidebar-title">CONTEÚDO DO CURSO</div>
